fixed the overflow

--- a/styles.css
+++ b/styles.css
@@ -277,8 +277,9 @@
     padding-top:10px;
     text-align:center;
 }
-
-
+@media only screen and (max-width: 600px) {
+    
+}
 
 
 
